# models/faqsModel.js
@@ -1,0 +1,8 @@
+import mongoose, { Schema, model } from "mongoose";
+
+const faqSchema = new Schema({
+  question: { type: String, required: true },
+  answer: { type: String, required: true },
+});
+
+export default model("Faq", faqSchema);
